...
        android:textSize="12pt"
        android:text="@string/text_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toEndOf="@+id/textView_type"
        app:layout_constraintTop_toTopOf="parent" />
...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_type"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioSelected"
            android:text="@string/radio_plus" />

        <RadioButton
...
        android:text="@string/text_value"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_type" />

    <EditText
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="請輸入金額"
...
        android:text="@string/text_describe"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_value" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="請輸入備註"
...
        android:text="@string/btn_cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:onClick="saveOnclick"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
...
