...
                android:text="@string/text_type0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView0_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView0_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
...
                android:text="@string/text_type1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView1_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView1_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
...
